--- a/src/LAB1/heat_map.ipynb
+++ b/src/LAB1/heat_map.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -37,9 +37,10 @@
     "os.environ['TF_ENABLE_ONEDNN_OPTS'] = '0'\n",
     "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '1' \n",
     "\n",
-    "img_path = os.path.abspath('') + '\\\\fish.jpg'\n",
+    "img_path = os.path.abspath('') + '/fish.jpg'\n",
     "\n",
     "from IPython.display import Image, display\n",
+    "\n",
     "display(Image(filename = img_path))\n",
     "print(\"Исходное изображение - фото золотой рыбки\")"
    ]
@@ -55,14 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 190ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 398ms/step\n",
       "Топ 5 предсказаний:\n",
       "goldfish - 99.9944%\n",
       "anemone_fish - 0.0031%\n",
@@ -83,10 +84,12 @@
     "img = applications.vgg16.preprocess_input(img)\n",
     "\n",
     "model = applications.VGG16(weights='imagenet', include_top=True)\n",
-    "predictions = applications.vgg16.decode_predictions(model.predict(img), top=5)[0];\n",
+    "\n",
+    "preds = model.predict(img)\n",
+    "decoded_preds = applications.vgg16.decode_predictions(preds, top=5)[0];\n",
     "\n",
     "print('Топ 5 предсказаний:')\n",
-    "for pred in predictions:\n",
+    "for pred in decoded_preds:\n",
     "    print('%s - %.4f%%' % (pred[1], pred[2]*100))"
    ]
   }
