--- a/src/LAB1/feature_map.ipynb
+++ b/src/LAB1/feature_map.ipynb
@@ -61,7 +61,7 @@
    "source": [
     "### Препроцессинг изображения\n",
     "\n",
-    "tf.keras.applications.vgg16.preprocess_input() изменяет диапазон значений пикселей, вычитая средние значения каналов (RGB: [123.68, 116.779, 103.939])\n",
+    "tf.keras.applications.vgg16.preprocess_input() изменяет диапазон значений пикселей, вычитая средние значения каналов RGB: [123.68, 116.779, 103.939]</br>\n",
     "\n",
     "Для корректного отображения изображения перед вызовом plt.imshow() денормализуем значения в диапазон [0,1], добавляя соответствующие средние значение каналов, с учетом использования tensorflow модели BGR вместо RGB\n"
    ]
@@ -156,8 +156,8 @@
    "metadata": {},
    "source": [
     "### Составим карту признаков\n",
-    "Составим карты признаков всех слоев свертки и пуллинга модели VGG16.</br>\n",
-    "СНачинаем со слоя block_conv1, заканчиваем слоем block5_pool (пропускаем слойт input_layer)"
+    "Составим карты признаков всех слоев свертки и пулинга модели VGG16.</br>\n",
+    "Начинаем со слоя block_conv1, заканчиваем слоем block5_pool."
    ]
   },
   {
