LSTM обучение в течение 60 эпох

--- a/src/LAB_1_1/feature_map.ipynb
+++ b/src/LAB_1_1/feature_map.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -33,6 +33,8 @@
     }
    ],
    "source": [
+    "#В данной работе использую Python 3.12.7 и tensorflow 2.19\n",
+    "\n",
     "#Имя входного файла\n",
     "input_file_name = 'images/fish.jpg'\n",
     "\n",
@@ -46,7 +48,7 @@
     "import matplotlib.pyplot as plt\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
-    "from IPython.display import Image, display\n",
+    "from IPython.display import Image, display #Для вывода исходной картинки\n",
     "from pathlib import Path\n",
     "\n",
     "# Загружаем изображение\n",
