--- a/src/LAB_1_2/bigmart_rnn.ipynb
+++ b/src/LAB_1_2/bigmart_rnn.ipynb
@@ -20,11 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "51f7b88b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#В данной работе использую Python 3.12.7 и Keras 3.9.0\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
