--- a/src/LAB_1_1/heat_map.ipynb
+++ b/src/LAB_1_1/heat_map.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -33,6 +33,8 @@
     }
    ],
    "source": [
+    "#В данной работе использую Python 3.12.7 и tensorflow 2.19\n",
+    "\n",
     "#Имя входного файла\n",
     "input_file_name = 'images/fish.jpg'\n",
     "\n",
