--- a/src/LAB_1_1/heat_map.ipynb
+++ b/src/LAB_1_1/heat_map.ipynb
@@ -340,10 +340,11 @@
     "# Вычисляем градиенты с помощью GradientTape\n",
     "with tf.GradientTape() as tape:\n",
     "    target_layer = model.get_layer(target_layer_name)\n",
-    "    iterate = tf.keras.Model([model.input], [target_layer.output, model.output])\n",
+    "    #Вспомогательная модель, возвращающая выход целевого слоя и вектор предсказаний\n",
+    "    iterate = tf.keras.Model([model.input], [target_layer.output, model.output]) \n",
     "    conv_output, predictions = iterate([img])\n",
     "    loss = predictions[:, predicted_class]  # Выбираем значение предсказанного класса\n",
-    "    grads = tape.gradient(loss, conv_output)  # Вычисляем градиенты\n",
+    "    grads = tape.gradient(loss, conv_output)  # Вычисляем градиенты loss по отношению к выходу сверточного слоя\n",
     "    pooled_grads = tf.reduce_mean(grads, axis=(0, 1, 2))  # Среднее значение градиентов\n",
     "\n",
     "# Корректируем выход свёрточного слоя\n",
