--- a/src/LAB_1_1/heat_map.ipynb
+++ b/src/LAB_1_1/heat_map.ipynb
@@ -388,7 +388,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv_python_3.12.7_tensorflow_2.19",
    "language": "python",
    "name": "python3"
   },
